删掉其他信息

--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -35,10 +35,10 @@
 	<section  id="design" class="use design">
 		<div class="container">
 			<h1>What is</h1>
-			<span>LAMDBA POOL</span>
+			<span> Lambda Bridge Pool </span>
 			<div >
 				<h1>Provide unlimited storage capabilities </h1>
-				<h2>a decentralized application infrastructure  Lambda</h2>
+				<h2>the Bridge Pool that is hatched by the Lambda foundation  </h2>
 				<p style="opacity:0.8;font-size:14px">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
 
 			</div>
@@ -87,112 +87,14 @@
 					</div>
 					<div class="intro-wrapper">
 						<div class="jg-circle"></div>
-						<p class="title">Providing services for large EOS DAPP </p>
-						<p class="intro">Provide unlimited storage capabilities for large EOS DAPP</p>
+						<p class="title">Providing services for  EOS DAPP </p>
+						<p class="intro">Provide unlimited storage capabilities for  EOS DAPP</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section id="team" class="use team">
-		<div class="container">
-			<h1>CORE TEAM</h1>
-			<div class="row team-wrapper">
-				<div class="col-md-2 col-xxs-4">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/hxy.png') %>" alt="">
-						</div>
-						<p class="name">He Xiaongyang</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/lmn.png') %>" alt="">
-						</div>
-						<p class="name">Li Monan</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/alex.png') %>" alt="">
-						</div>
-						<p class="name">Alex Lototskiy</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/hbq.png') %>" alt="">
-						</div>
-						<p class="name">He Bingqing</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/ghq.png') %>" alt="">
-						</div>
-						<p class="name">Guo Hongqiang</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/gaohq.png') %>" alt="">
-						</div>
-						<p class="name">Gao Haiqiang</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/Oleg.png') %>" alt="">
-						</div>
-						<p class="name">Oleg Lyamtsev</p>
-					</div>
-				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
-					<div class="head">
-						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/zhj.png') %>" alt="">
-						</div>
-						<p class="name">Zhao Haijun</p>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</section>
-
-
-
-	<section id="partners" class="use partners">
-		<div class="container">
-			<h1>PARTNERS</h1>
-
-			<div class="row partners-wrapper">
-				<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-					<div class="partners-logo">
-						<img src="<%= require('../../img/index/apache.png') %>" alt="">
-					</div>
-				</div> -->
-				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-					<div class="partners-logo">
-						<img src="<%= require('../../img/index/oneapm.png') %>" alt="">
-					</div>
-				</div>
-				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-					<div class="partners-logo partners-logoyfy">
-						<img class="yfy" src="<%= require('../../img/index/yfy.png') %>" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 <div class="star-field">
   <div class="layer"></div>
