--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -40,12 +40,12 @@
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a target="_blank" href="https://twitter.com/Lambda39241229">
+							<a target="_blank" href="https://twitter.com/Lambdaim">
 								Twitter
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a target="_blank" href="https://t.me/Lambdaim" >
+							<a target="_blank" href="https://t.me/HelloLambda" >
 								Telegram
 							</a>
 						</div>
@@ -76,8 +76,8 @@
 							<% } else if(pageId === 'indexEn'){ %>
 								<li target="_blank" class="mao"><a href="https://www.lambda.im/en/index.html">Home</a></li>
 								<li target="_blank" class="mao"><a href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
-								<li target="_blank" class="mao"><a href="https://twitter.com/Lambda39241229">Twitter</a></li>
-								<li target="_blank" class="mao"><a href="https://t.me/Lambdaim">Telegram</a></li>
+								<li target="_blank" class="mao"><a href="https://twitter.com/Lambdaim">Twitter</a></li>
+								<li target="_blank" class="mao"><a href="https://t.me/HelloLambda">Telegram</a></li>
 							<% } %>
 						</ul>
 					</div>
