--- a/src/css/page/from.less
+++ b/src/css/page/from.less
@@ -404,3 +404,10 @@ a:hover{color: #00b7ff}
 
 a:active{color: #00b7ff}
 }
+
+
+input.input100 {
+	width: 100%;
+  height: 50px;
+  padding: 0 20px 0 23px;
+}
