--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -8,26 +8,26 @@
 				</div>
 				<div class="navbar nav-right">
 					<% if(pageId === 'index') {%>
-					<div class="nav-item mao">
-						<a href="javascript:;" >
-							使用场景
-						</a>
-					</div>
-	        <div class="nav-item mao" >
-	          <a href="javascript:;">
-	            工作原理
-	          </a>
-	        </div>
-					<div class="nav-item mao" >
-						<a href="javascript:;">
-							生态系统
-						</a>
-					</div>
-					<div class="nav-item mao" >
-						<a href="javascript:;" >
-							路线图
-						</a>
-					</div>
+						<div class="nav-item mao">
+							<a target="_blank" href="https://www.lambda.im/en/index.html" >
+								首页
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a target="_blank" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">
+								白皮书
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a target="_blank" href="https://weibo.com/lambdaim?is_all=1">
+								微博
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a target="_blank" href="http://weixin.qq.com/r/Hip-Z_7EjbPyraoE938M" >
+								微信
+							</a>
+						</div>
 					<% } else if(pageId === 'indexEn'){ %>
 						<div class="nav-item mao">
 							<a target="_blank" href="https://www.lambda.im/en/index.html" >
@@ -44,11 +44,7 @@
 								Twitter
 							</a>
 						</div>
-						<div class="nav-item mao" >
-							<a target="_blank" href="https://t.me/HelloLambda" >
-								Telegram
-							</a>
-						</div>
+
 						<div class="nav-item mao" >
 							<a target="_blank" href="https://medium.com/@Lambdaim" >
 								Medium
