--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -24,7 +24,7 @@
 							</a>
 						</div>
 						<div class="nav-item mao" >
-							<a target="_blank" href="http://weixin.qq.com/r/Hip-Z_7EjbPyraoE938M" >
+							<a target="_blank" href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" >
 								微信
 							</a>
 						</div>
@@ -65,10 +65,10 @@
 					<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
 						<ul>
 							<% if(pageId === 'index') {%>
-							<li class="mao"><a href="javascript:;">使用场景</a></li>
-							<li class="mao"><a href="javascript:;">工作原理</a></li>
-							<li class="mao"><a href="javascript:;">生态系统</a></li>
-							<li class="mao"><a href="javascript:;">路线图</a></li>
+							<li class="mao"><a href="https://www.lambda.im/en/index.html">首页</a></li>
+							<li class="mao"><a href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">白皮书</a></li>
+							<li class="mao"><a href="https://weibo.com/lambdaim?is_all=1">微博</a></li>
+							<li class="mao"><a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA">微信</a></li>
 							<% } else if(pageId === 'indexEn'){ %>
 								<li  class="mao"><a target="_blank" href="https://www.lambda.im/en/index.html">Home</a></li>
 								<li  class="mao"><a target="_blank" href="http://www.lambda.im/doc/Lambda-WhitePaper-en.pdf">Download whitepaper</a></li>
