--- a/src/view/pages/cn/index.ejs
+++ b/src/view/pages/cn/index.ejs
@@ -3,7 +3,7 @@
 	<section class="banner-contents" style=" margin-bottom: 0px;padding-bottom:0px">
 		<div class="container" style="text-align: center">
 			<div>
-				<h1 style="    margin-bottom: 30px"> Lambda 吃糖果时间！   </h1>
+				<h1 style="    margin-bottom: 30px"> Lambda 糖果大作战   </h1>
 				<p style="opacity:0.8;font-size:16px;text-align: left,margin-bottom: 0px">
 					只要根据以下简单的指示就能获得LAMB币哟。
 
