--- a/src/view/pages/cn/index.ejs
+++ b/src/view/pages/cn/index.ejs
@@ -24,93 +24,82 @@
 
 	<section id="roadmap" class="use roadmap" style="padding:0 0 ">
 		<div class="container">
-			<div class="row" style="position:relative">
-      	<div class="col-md-offset-1 col-md-11 ">
-					<div class="row">
-      			<div class="col-sm-2 col-xxs-2">
-      				<div class="nc-wrapper">
+			<div class="row">
+			  <div class="col-sm-1 col-md-3"></div>
+			  <div class="col-sm-10 col-md-6">
+					<div>
+						<div >
 
-      				</div>
-      			</div>
-      			<div class="p-l-0 col-sm-10 col-xxs-10">
-      				<div class="year-list">
+							<div class="">
+								<div class="year-list">
 
-      					<h2 class="title">拿10个LAMB </h2>
+									<h2 class="title">拿10个LAMB </h2>
 
-      				</div>
-      			</div>
-      		</div>
-      		<div class="row">
-      			<div class="col-sm-2 col-xxs-2">
-      				<div class="nc-wrapper">
+								</div>
+							</div>
+						</div>
+						<div >
 
-      				</div>
-      			</div>
-      			<div class="p-l-0 col-sm-10 col-xxs-10">
-      				<div class="year-list">
+							<div class="">
+								<div class="year-list">
 
-      					<h2 class="title">1.关注 Lambda微信官方公众号</h2>
+									<h2 class="title">1.关注 Lambda微信官方公众号</h2>
 
-      				</div>
-      			</div>
-      		</div>
-      		<div class="row">
-      			<div class="col-sm-2 col-xxs-2">
+								</div>
+							</div>
+						</div>
+						<div >
 
-      			</div>
-      			<div class="p-l-0 col-sm-10 col-xxs-10">
-      				<div class="year-list">
+							<div class="">
+								<div class="year-list">
 
-      					<h2 class="title">2.关注 Lambda微博官方账号 </h2>
+									<h2 class="title">2.关注 Lambda微博官方账号 </h2>
 
-      				</div>
-      			</div>
-      		</div>
-      		<div class="row">
-      			<div class="col-sm-2 col-xxs-2">
+								</div>
+							</div>
+						</div>
+						<div >
 
-      			</div>
-      			<div class="p-l-0 col-sm-10 col-xxs-10">
-      				<div class="year-list">
+							<div class="">
+								<div class="year-list">
 
-      					<h2 class="title">3.转发 Lambda 置顶的微博 </h2>
+									<h2 class="title">3.转发 Lambda 置顶的微博 </h2>
 
-      				</div>
-      			</div>
-      		</div>
-					<div class="row">
-						<div class="col-sm-2 col-xxs-2">
+								</div>
+							</div>
+						</div>
+						<div >
+
+
+							<div class="">
+								<div class="year-list">
+									 <h2 class="title">4.转发 Lambda微信官方公众号一篇文章到朋友圈  </h2>
+
+								</div>
+								<ul style="">
+
+									<li>邀请好友参与活动可获得5个LAMB币.</li>
+									<li style="">&nbsp;</li>
+					<li style="">
+					活动规则:</li>
+									<li>-活动时间从7月10日到7月17日 </li>
+									<li>-最多每人可获得50LAMB币</li>
+
+
+
+									</div>
+
+
+
+
+								</ul>
+							</div>
 
 						</div>
 
-      			<div class="p-l-0 col-sm-10 col-xxs-10">
-      				<div class="year-list">
-								 <h2 class="title">4.转发 Lambda微信官方公众号一篇文章到朋友圈  </h2>
-
-      				</div>
-							<ul style="">
-
-								<li>邀请好友参与活动可获得5个LAMB币.</li>
-								<li style="">&nbsp;</li>
-				<li style="">
-				活动规则:</li>
-				        <li>-活动时间从7月10日到7月17日 </li>
-								<li>-最多每人可获得50LAMB币</li>
-
-
-
-								</div>
-
-
-
-
-							</ul>
-      			</div>
-
-      		</div>
-
-      	</div>
-      </div>
+				</div>
+			  <div class="col-sm-1 col-md-3"></div>
+			</div>
 
 			<p id="ethbtn" style="    text-align: center">
 				<input id="ethaddress"  class="input100" type="text" name="ethaddress" placeholder="请输入你的ETH地址">
