--- a/src/view/pages/form/index.ejs
+++ b/src/view/pages/form/index.ejs
@@ -75,7 +75,7 @@ Your referral link:</div>
 					<div class="wrap-input100 validate-input" data-validate="Name is required">
 						<p  class="Explain" >
 							 Following Lambda’s Medium: <a target="_blank" href="https://medium.com/@Lambdaim">https://medium.com/@Lambdaim</a><br/>
-							 Please upload the screenshot to prove you followed our Medium
+							 Please upload the screenshot to prove you followed our Medium（Optional）
 					  </p>
 						<a class="contact100-form-btn" id="Mediumscreenshot_a">
 							select file
