--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -852,3 +852,8 @@ section.partners{
 .star-field .layer:nth-child(3) {
   animation: sf-fly-by-3 5s linear infinite;
 }
+
+.partners768{
+	
+	margin-top: 30px;
+}
