--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -517,6 +517,82 @@
 					<img class="yfy" src="<%= require('../../../img/index/yfy.png') %>" alt="">
 				</div>
 			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/1_zhenge.png') %>" alt="">
+				</div>
+			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/2_daduhui.png') %>" alt="">
+				</div>
+			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/3_DFund.png') %>" alt="">
+				</div>
+			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/4_ceyuan.png') %>" alt="">
+				</div>
+			</div>
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/5_fanzheng.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/6_BlockVC.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/7_IOST.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/8_DATA.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/9_H-CAPITAL.png') %>" alt="">
+				</div>
+			</div>
+
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/10_spark_capital.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/10_spark_capital.png') %>" alt="">
+				</div>
+			</div>
+
+			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+				<div class="partners-logo partners-logoyfy">
+					<img class="yfy" src="<%= require('../../../img/partner/11_jiduziben.png') %>" alt="">
+				</div>
+			</div>
+
+
+
+
+
+
+
+
 		</div>
 	</div>
 </section>
