--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -6,16 +6,15 @@
 			</div>
 			<div class="info">
 				<div class="about">
-					
+
 				</div>
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
 					<ul>
 						<li><a href="https://www.facebook.com/EFC-Foundation-197517864223243/(under Lucy’s personal facebook account)" target="_blank"><img src="<%= require('../../img/index/facebook.png') %>"/></a></li>
 						<li><a href="https://www.linkedin.com/company/efc-foundation/(under Lucy’s personal LinkedIn account)" target="_blank"><img src="<%= require('../../img/index/linkedin.png') %>"/></a></li>
-						<li><a href="https://twitter.com/Lambda39241229" target="_blank"><img src="<%= require('../../img/index/twitter.png') %>"/></a></li>
-						<li><a href="https://www.reddit.com/user/EFCFoundation" target="_blank"><img src="<%= require('../../img/index/reddit.png') %>"/></a></li>
-						<li><a href="https://t.me/Lambdaim" target="_blank"><img src="<%= require('../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/twitter.png') %>"/></a></li>
+						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../img/index/telegram.png') %>"/></a></li>
 
 					</ul>
 				</div>
