‘更新汉字和首页图片’

--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -2,23 +2,34 @@
 	<div class="bg"></div>
 	<section class="banner-contents">
 		<div class="container">
-			<div class="col-md-6 col-xs-12">
-				<h1>Provide unlimited storage capabilities</h1>
-				<h2>a decentralized application infrastructure  Lambda</h2>
-				<p style="opacity:0.8;font-size:14px">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
+			<div  class="col-md-8 col-xs-12"  >
+				<h2 style="margin-bottom: 30px" >Provide unlimited storage capabilities</h2>
+				<h3 style="margin-bottom: 30px" >a decentralized application infrastructure  Lambda</h3>
+				<p style="opacity:0.8;font-size:14px;text-align: left;">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
 				<a class="btn" href="https://dn-oneapm.qbox.me/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
+				<div class="contact">
+					<!-- <h3 class="title">联系我们</h3> -->
+					<ul>
+						<li><a href="https://www.facebook.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/facebook.png') %>"/></a></li>
+						<li><a href="https://www.linkedin.com/company/lambdaim" target="_blank"><img src="<%= require('../../../img/index/linkedin.png') %>"/></a></li>
+						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/twitter.png') %>"/></a></li>
+						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../../img/index/telegram.png') %>"/></a></li>
+
+					</ul>
+				</div>
 			</div>
-			<div class="crowd col-md-6 col-xs-12">
-				<p class="countdown-top">Launch Count Down</p>
-				<div id="getting-started" class="countdown"></div>
+			<div class="crowd col-md-4 col-xs-12">
+
+         <img style="    margin-top: 100px;" class="work-img" src="<%= require('../../../img/index/yl-4.png') %>" alt="">
 
 			</div>
+
 		</div>
 	</section>
 	<section id="scene" class="scene use">
 		<div class="container">
-			<h1 >使用场景</h1>
-			<span>APPLICATION SCENARIOS</span>
+			<h1 >APPLICATION SCENARIOS</h1>
+			<!-- <span>APPLICATION SCENARIOS</span> -->
 			<div class="row wrapper">
 				<div class=" scene-item col-lg-w-30 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
@@ -108,8 +119,8 @@
 	</section>
 	<section id="design" class="use design">
 		<div class="container">
-			<h1>架构设计</h1>
-			<span>ARCHITECTURE DESIGN</span>
+			<h1>ARCHITECTURE DESIGN</h1>
+			<!-- <span>ARCHITECTURE DESIGN</span> -->
 			<div class="row">
 				<div class="col-md-offset-1 col-md-10">
 					<img src="<%= require('../../../img/index/design.png') %>" alt="">
@@ -134,7 +145,7 @@
 				<div class="jgsj col-md-4 col-sm-4 ">
 					<div class="intro-wrapper">
 						<div class="jg-circle"></div>
-						<p class="title">Lambda DB的底层结构支撑系统</p>
+						<p class="title">Lambda DB Infrastructure</p>
 						<p class="intro">A Lambda DB underlying infrastructure supporting system, including a block storage system and a distributed file system Lambda FS</p>
 					</div>
 					<div class="intro-wrapper">
@@ -160,8 +171,8 @@
 	</section>
 	<section id="principle" class="use principle">
 		<div class="container">
-			<h1>工作原理</h1>
-			<span>WORKING PRINCIPLE</span>
+			<h1>WORKING PRINCIPLE</h1>
+			<!-- <span>WORKING PRINCIPLE</span> -->
 			<div class="row">
 				<div class="col-xs-12 ">
 					<div class="tab-btn">
@@ -219,8 +230,8 @@
 	</section>
 	<section id="ecosystem" class="use ecosystem">
 		<div class="container">
-			<h1>生态系统</h1>
-			<span>ECOSYSTEM</span>
+			<h1>ECOSYSTEM</h1>
+			<!-- <span>ECOSYSTEM</span> -->
 			<div class="row">
 				<div class="col-xs-12">
 					<img src="<%= require('../../../img/index/Group2x.png') %>" alt="">
@@ -233,8 +244,7 @@
 	</section>
 	<section id="roadmap" class="use roadmap">
 		<div class="container">
-			<h1>路线图</h1>
-			<span>ROADMAP</span>
+			<h1>ROADMAP</h1>
 			<div class="row" style="position:relative">
       	<div class="col-md-offset-1 col-md-11 box-wrapper">
       		<div class="row">
@@ -376,15 +386,15 @@
 	</section>
 	<section id="team" class="use team">
 		<div class="container">
-			<h1>核心团队</h1>
-			<span>CORE TEAM</span>
+			<h1>CORE TEAM</h1>
+			<!-- <span>CORE TEAM</span> -->
 			<div class="row team-wrapper">
 				<div class="col-md-2 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/hxy.png') %>" alt="">
 						</div>
-						<p class="name">何晓阳</p>
+						<p class="name">He Xiaongyang</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
@@ -392,7 +402,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/lmn.png') %>" alt="">
 						</div>
-						<p class="name">李沫南</p>
+						<p class="name">Li Monan</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
@@ -408,7 +418,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/hbq.png') %>" alt="">
 						</div>
-						<p class="name">何冰清</p>
+						<p class="name">He Bingqing</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
@@ -416,7 +426,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/ghq.png') %>" alt="">
 						</div>
-						<p class="name">郭宏强</p>
+						<p class="name">Guo Hongqiang</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4">
@@ -424,7 +434,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/gaohq.png') %>" alt="">
 						</div>
-						<p class="name">高海强</p>
+						<p class="name">Gao Haiqiang</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
@@ -440,18 +450,20 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/zhj.png') %>" alt="">
 						</div>
-						<p class="name">赵海俊</p>
+						<p class="name">Zhao Haijun</p>
 					</div>
 				</div>
 			</div>
-			<h2>专家顾问<span>ADVISOR</span></h2>
+			<h2>ADVISOR
+				<!-- <span>ADVISOR</span> -->
+			</h2>
 			<div class="row team-wrapper team-wrapper2">
 				<div class="col-md-2 col-xxs-4  ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/tj.png') %>" alt="">
 						</div>
-						<p class="name">田甲</p>
+						<p class="name">Tian Jia</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
@@ -459,7 +471,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/szy.png') %>" alt="">
 						</div>
-						<p class="name">孙仲英</p>
+						<p class="name">Sun Zhongying</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
@@ -467,7 +479,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/lch.png') %>" alt="">
 						</div>
-						<p class="name">刘春华</p>
+						<p class="name">Liu Chunhua</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
@@ -475,7 +487,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/wt.png') %>" alt="">
 						</div>
-						<p class="name">王涛</p>
+						<p class="name">Wang Tao</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
@@ -483,7 +495,7 @@
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/cy.png') %>" alt="">
 						</div>
-						<p class="name">程远</p>
+						<p class="name">Cheng Yuan</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4  ">
@@ -499,15 +511,15 @@
 	</section>
 <section id="partners" class="use partners">
 	<div class="container">
-		<h1>合作伙伴</h1>
-		<span>PARTNERS</span>
+		<h1>PARTNERS</h1>
+		<!-- <span>PARTNERS</span> -->
 		<div class="row partners-wrapper">
 			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo">
 					<img src="<%= require('../../../img/index/apache.png') %>" alt="">
 				</div>
 			</div> -->
-			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo">
 					<img src="<%= require('../../../img/index/oneapm.png') %>" alt="">
 				</div>
@@ -516,7 +528,7 @@
 				<div class="partners-logo partners-logoyfy">
 					<img class="yfy" src="<%= require('../../../img/index/yfy.png') %>" alt="">
 				</div>
-			</div>
+			</div> -->
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
 					<img class="yfy" src="<%= require('../../../img/partner/1_zhenge.png') %>" alt="">
@@ -570,15 +582,11 @@
 
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
-					<img class="yfy" src="<%= require('../../../img/partner/10_spark_capital.png') %>" alt="">
+					<img class="yfy" src="<%= require('../../../img/partner/10_sparkcapital.png') %>" alt="">
 				</div>
 			</div>
 
-			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
-				<div class="partners-logo partners-logoyfy">
-					<img class="yfy" src="<%= require('../../../img/partner/10_spark_capital.png') %>" alt="">
-				</div>
-			</div>
+
 
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo partners-logoyfy">
