--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -77,7 +77,7 @@ section.banner-contents{
 		-webkit-text-fill-color: transparent;
 	}
 	.btn{
-		margin-top: 61px;
+		margin-top: 21px;
 		display: inline-block;
 		color: #fff;
 		padding: 9px 32px 11px;
@@ -854,6 +854,20 @@ section.partners{
 }
 
 .partners768{
-	
+
 	margin-top: 30px;
+}
+.banner-contents{
+	.contact{
+		margin-top: 40px;
+		img{
+			width: 26px;
+		}
+		li{
+			width: 26px;
+			margin-right: 5%;
+			height: auto;
+			display: inline-block;
+		}
+	}
 }
