--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -2,23 +2,33 @@
 	<div class="bg"></div>
 	<section class="banner-contents">
 		<div class="container">
-			<div  class="col-md-8 col-xs-12"  >
-				<h2 style="margin-bottom: 30px" >Provide unlimited storage capabilities</h2>
-				<h3 style="margin-bottom: 30px" >a decentralized application infrastructure  Lambda</h3>
-				<p style="opacity:0.8;font-size:14px;text-align: left;">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
+			<div  class="col-md-9 col-xs-12"  >
+				<h2 style="margin-bottom: 30px;font-size: 35px;" > A Disruptor in Blockchain-Based Storage Solution</h2>
+				<h3 style="margin-bottom: 30px;font-size: 30px;" >Providing Unlimited Storage Capabilities</h3>
+				<p style="opacity:0.8;font-size:20px;text-align: left;">
+					Lambda is a fast, safe, and scalable blockchain infrastructure project, which provides decentralized applications (DAPPs) data storage capabilities with unlimited scalability and fulfills services such as multi-chain data co-storage, cross-chain data management, data privacy protection, PDP, and
+distributed intelligent computing through logic decoupling and independent implementation of Lambda Chain and Lambda DB
+
+				</p>
 				<a class="btn" href="https://dn-oneapm.qbox.me/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
 					<ul>
+						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/twitter.png') %>"/></a></li>
+						<li class="wechatitem">
+							<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank"><img src="<%= require('../../../img/index/wechat.png') %>"/></a>
+							<img style="width:100px" class="wechatQRcode"  src="<%= require('../../../img/index/wechartrq.jpg') %>"/>
+						</li>
 						<li><a href="https://www.facebook.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/facebook.png') %>"/></a></li>
 						<li><a href="https://www.linkedin.com/company/lambdaim" target="_blank"><img src="<%= require('../../../img/index/linkedin.png') %>"/></a></li>
-						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../../img/index/twitter.png') %>"/></a></li>
-						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank"><img src="<%= require('../../../img/index/weibo.png') %>"/></a></li>
+
 
 					</ul>
 				</div>
 			</div>
-			<div class="crowd col-md-4 col-xs-12">
+			<div class="crowd col-md-3 col-xs-12">
 
          <img style="    margin-top: 100px;" class="work-img" src="<%= require('../../../img/index/yl-4.png') %>" alt="">
 
