--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -25,10 +25,15 @@
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
 					<ul>
+						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/twitter.png') %>"/></a></li>
+						<li class="wechatitem">
+							<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank"><img src="<%= require('../../img/index/wechat.png') %>"/></a>
+							<img style="width:100px" class="wechatQRcode"  src="<%= require('../../img/index/wechartrq.jpg') %>"/>
+						</li>
 						<li><a href="https://www.facebook.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/facebook.png') %>"/></a></li>
 						<li><a href="https://www.linkedin.com/company/lambdaim" target="_blank"><img src="<%= require('../../img/index/linkedin.png') %>"/></a></li>
-						<li><a href="https://twitter.com/Lambdaim" target="_blank"><img src="<%= require('../../img/index/twitter.png') %>"/></a></li>
-						<li><a href="https://t.me/HelloLambda" target="_blank"><img src="<%= require('../../img/index/telegram.png') %>"/></a></li>
+						<li><a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank"><img src="<%= require('../../img/index/weibo.png') %>"/></a></li>
 
 					</ul>
 				</div>
