添加图片修改文案

--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -1,11 +1,11 @@
 <div id="body">
 	<div class="bg"></div>
-	<section class="banner-contents">
+	<section class="banner-contents  firstbgimg">
 		<div class="container">
-			<div  class="col-md-9 col-xs-12"  >
-				<h2 style="margin-bottom: 30px;font-size: 35px;" > A Disruptor in Blockchain-Based Storage Solution</h2>
-				<h3 style="margin-bottom: 30px;font-size: 30px;" >Providing Unlimited Storage Capabilities</h3>
-				<p style="opacity:0.8;font-size:20px;text-align: left;">
+			<div  class="col-md-7 col-xs-12"  >
+				<h2 style="margin-bottom: 30px;font-size: 29px;" > A Disruptor in Blockchain-Based Storage Solution</h2>
+				<h3 style="margin-bottom: 30px;font-size: 26px;" >Providing Unlimited Storage Capabilities</h3>
+				<p style="opacity:0.8;font-size:14px;text-align: left;    width: 90%">
 					Lambda is a fast, safe, and scalable blockchain infrastructure project, which provides decentralized applications (DAPPs) data storage capabilities with unlimited scalability and fulfills services such as multi-chain data co-storage, cross-chain data management, data privacy protection, PDP, and
 distributed intelligent computing through logic decoupling and independent implementation of Lambda Chain and Lambda DB
 
@@ -28,9 +28,9 @@ distributed intelligent computing through logic decoupling and independent imple
 					</ul>
 				</div>
 			</div>
-			<div class="crowd col-md-3 col-xs-12">
+			<div class="crowd col-md-5 hidden-sm  hidden-xs hidden-xxs">
 
-         <img style="    margin-top: 100px;" class="work-img" src="<%= require('../../../img/index/yl-4.png') %>" alt="">
+         <img style="width: 100%; margin-top: -30px;" class="work-img" src="<%= require('../../../img/index/fimg1.png') %>" alt="">
 
 			</div>
 
