--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -407,7 +407,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">He Xiaongyang</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/lmn.png') %>" alt="">
@@ -415,7 +415,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Li Monan</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/alex.png') %>" alt="">
@@ -423,7 +423,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Alex Lototskiy</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/hbq.png') %>" alt="">
@@ -431,7 +431,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">He Bingqing</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/ghq.png') %>" alt="">
@@ -447,7 +447,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Gao Haiqiang</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/Oleg.png') %>" alt="">
@@ -455,7 +455,7 @@ distributed intelligent computing through logic decoupling and independent imple
 						<p class="name">Oleg Lyamtsev</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+				<div class="col-md-2 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../../img/index/zhj.png') %>" alt="">
