--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -12,6 +12,7 @@
 							<li class="mao"><a  href="javascript:;" >Working Principle</a></li>
 							<li class="mao"><a  href="javascript:;" >Ecosystems</a></li>
 							<li class="mao"><a  href="javascript:;" >RoadMap</a></li>
+							<li class="mao"><a  href="http://blog.lambda.im/" >Blog</a></li>
 						</ul>
 					<% } else {%>
 						<ul>
@@ -19,6 +20,7 @@
 							<li class="mao"><a  href="javascript:;" >工作原理</a></li>
 							<li class="mao"><a  href="javascript:;" >生态系统</a></li>
 							<li class="mao"><a  href="javascript:;" >路线图</a></li>
+							<li class="mao"><a  href="http://blog.lambda.im/" >博客</a></li>
 						</ul>
 					<% } %>
 				</div>
