--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -665,9 +665,12 @@ section.partners{
 
 	section.team{
 		.head{
-			margin-top: 40px;
+			margin-top: 20px;
+
 			.name{
 				font-size: 16px;
+				min-height: 40px;
+				line-height: 16px;
 			}
 		}
 		h2{
